<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/space_16"
    android:theme="@style/Theme.Stepic">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/Entering"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="@dimen/font_16" />


    <EditText
        android:id="@+id/search_edit_frame"
        style="@style/edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginVertical="@dimen/space_8"
        android:hint="@string/example_gmail_com"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="@dimen/font_16" />


    <EditText
        android:id="@+id/password_edit_frame"
        style="@style/edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginVertical="@dimen/space_8"
        android:hint="@string/enter_the_password"
        android:inputType="textPassword" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_button"
        style="@style/button_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_24"
        android:paddingVertical="10dp"
        android:text="@string/Entering" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/space_16"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/no_account"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/registration_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_4"
            android:text="@string/registration"
            android:textColor="@color/green" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/space_4"
        android:layout_marginTop="@dimen/space_8"
        android:text="@string/forgot_password"
        android:textColor="@color/green" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/space_32"
        android:background="#4D555E" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_32"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageButton
            android:id="@+id/vk"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:background="@drawable/splach_button"
            android:backgroundTint="@color/vk_blue"
            android:src="@drawable/ic_vk" />

        <Space
            android:layout_width="@dimen/space_16"
            android:layout_height="@dimen/space_0" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:background="@drawable/ok_button"
            android:src="@drawable/ic_odnoklassniki" />

    </LinearLayout>

</LinearLayout>